# rag-demo-02

./: .gitignore  README.md  config.yaml  env.template  pyproject.toml  rag_prompt.md
rag-lite/: app.py  app_local.py  helpers.py  local_services.py  log_time.py  logger.py  ollama_services.py  openai_services.py  parser.py  parser_local.py  rag_pipeline.py  temp.py  test_local_retrieval.py
tests/: retrieval_tests.yaml  test_local_retrieval_report.md
tests/.cache/tests/cache/0213625aac0a03df9a53cbbad4a711bb64928075a3880bced73bb308ee695ce8/: chunks.json  converted.md  uploaded.docx
tests/.cache/tests/cache/8f7eb13da6669670e83bdb50844a7d00587ea409c9004826620b285ba2cb15bc/: chunks.json  uploaded.docx
tests/documents/: ragtest02.docx  ragtest03.docx
tmp/cache/: 0213625aac0a03df9a53cbbad4a711bb64928075a3880bced73bb308ee695ce8_converted.md  0213625aac0a03df9a53cbbad4a711bb64928075a3880bced73bb308ee695ce8_uploaded.docx  20107a2ef40adad00baaf28c11afe53a0cf74564b5ca2f89ba41ac91cb1ca8a9_converted.md  20107a2ef40adad00baaf28c11afe53a0cf74564b5ca2f89ba41ac91cb1ca8a9_uploaded.docx  87dde14e714177c643a66502feedbb94f0cb302a6792d407a6028f7a2d47a1f1_uploaded.docx
